Fixed the header to actually align correct
Still missing some formatting issues. Need to fix image position.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,90 +8,73 @@ body {
   background-image: url(../images/white-waves.png);
 }
 
-/* Style the header */
-
-.topnav {
+header {
+    display: flex;
+    position: fixed;
+    align-items: center;
+    width: 100%;
+    height:70px;
+    top: 0px;
+    left:0;
     background-color: white;
-    overflow: hidden;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: right;
-    color: gray;
-    text-align: right;
-    padding: 14px 16px;
+    padding: 30px;
     text-decoration: none;
-    font-size: 17px;
   }
   
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Add a color to the active/current link */
-  .topnav a.active {
-    background-color: #4CAF50;
-    color: white;
+  .nav-links li {
+    justify-content: flex-end;
+    display: inline-block;
+    padding: 20px 20px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
   }
 
 h1 {
   font-family: Georgia, 'Times New Roman', Times, serif;
   background-color: #4aaaa5;
-  padding: 30px;
-  text-align: center;
+  padding:15px 20px;
+  text-align: left;
   font-size: 35px;
   color: white;
   float: left;
+  margin-right: auto;
+  padding-left: 100px;
 }
 
 h2 {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    background-color: #ffffff;
+    background-color: white;
     color: #4aaaa5;
+    font-size: 35px;
     text-align: left;
-    float: center;
+    float: left;
 }
 
-/* Create the */
-p {
+.main {
+    background-color:white;
+    padding-top: 100px;
     font-family: Arial, Helvetica, sans-serif;
-    text-align: left
+    text-align: left;
+    width: 762px; 
+    height: 400px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    border: gray 1px;
 }
-
-img {
-    align-content: left;
-    padding:30px;
-}
-
-/* Style the list inside the menu */
-nav ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-article {
-  float: left;
-  padding: 20px;
-  width: 70%;
-  background-color: #f1f1f1;
-  height: 300px; /* only for demonstration, should be removed */
-}
-
-/* Clear floats after the columns */
-section:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Style the footer */
 
 footer {
   background-color: #666666;
   padding: 10px;
   text-align: center;
   color: white;
+  display: fixed;
+  border-top: #4aaaa5 2px;
+  position: fixed;
+  width: 100%;
+  left:0;
+  bottom:0;
 }
